viewer/css/main.css
body, html {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    /*font-family: Tahoma;*/
    font-size: 14px;
}
.appHeader {
    background: url("../images/linen.jpg") repeat-x scroll left top transparent;
    height: 70px;
    margin: 0;
    padding: 0;
    width: 100%;
}
.appHeader .headerLogo {
    float: left;
    left: 30px;
    position: relative;
    top: 8px;
}
.appHeader .headerTitle {
    color: #FFFFFF;
    float: left;
    font-size: 16pt;
    font-weight: bold;
    left: 60px;
    top: 15px;
    position: relative;
}
.appHeader .subHeaderTitle {
    color: #CFCFCF;
    font-size: small;
    padding-left: 20px;
}
.appHeader .search {
    float: left;
    left: 80px;
    position: relative;
    top: 18px;
}
.appHeader .headerLinks {
    float: right;
    color: #FFFFFF;
    position: relative;
    top: 27px;
    right: 10px;
    text-align: right;
}
.appHeader .headerLinks a {
    color: #FFFFFF;
}
#borderContainerOuter {
    position: absolute;
    top: 70px;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #FFFFFF
}
#sidebarLeft {
    width: 334px;
    padding: 4px;
    margin: 0;
    overflow: auto;
    overflow-x: hidden;
    border-right: 1px solid #B5BCC7;
}
#sidebarRight {
    width: 334px;
    padding: 4px;
    margin: 0;
    overflow: auto;
    overflow-x: hidden;
    border-left: 1px solid #B5BCC7;
}
#sidebarBottom {
    height: 300px;
    padding: 4px;
    margin: 0;
    overflow: auto;
    overflow-x: hidden;
    border-top: 1px solid #B5BCC7;
}
#mapCenter {
    padding: 0;
    overflow: hidden;
    background: url("../images/noisy_grid.png") #fff;
}
.HomeButton, .LocateButton {
    margin-bottom: 10px;
}
.titlePaneBottomFix {
    margin-bottom: -1px;
}
.titlePaneRightFix {
    margin-right: -1px;
}
.sidebarCollapseButton {
    width: 16px;
    height: 25px;
    position: absolute;
    top: 250px;
    z-index: 40;
    border-bottom: 1px solid #B5BCC7;
    border-top: 1px solid #B5BCC7;
    background-color: white;
    cursor: pointer;
    color: #666666;
    font-size: 1.3em;
}
.sidebarbottomCollapseButton {
    width: 25px;
    height: 18px;
    position: absolute;
    left: 50%;
    z-index: 40;
    border-left: 1px solid #B5BCC7;
    border-right: 1px solid #B5BCC7;
    background-color: white;
    cursor: pointer;
    color: #666666;
    font-size: 1.3em;
}
.sidebarleftCollapseButton {
    border-radius: 0 5px 5px 0;
    border-right: 1px solid #B5BCC7;
}
.sidebarbottomCollapseButton {
    border-radius: 5px 5px 0 0;
    border-top: 1px solid #B5BCC7;
}
.sidebarrightCollapseButton {
    border-radius: 5px 0 0 5px;
    border-left: 1px solid #B5BCC7;
}
.sidebarCollapseButton .button {
    padding-top: 3px;
    padding-left: 2px;
}
.sidebarbottomCollapseButton .button {
    padding-left: 4px;
}
.sidebarleftCollapseButton .close:before {
    content: "\f053";
}
.sidebarleftCollapseButton .open:before {
    content: "\f054";
}
.sidebarrightCollapseButton .open:before {
    content: "\f053";
}
.sidebarrightCollapseButton .close:before {
    content: "\f054";
}
.sidebarbottomCollapseButton .open:before {
    content: "\f077";
}
.sidebarbottomCollapseButton .close:before {
    content: "\f078";
}
.floatingWidget_underlay {
    display: none
}
#help_parent_underlay {
    display: block;
}

/* dbootstrap overrides*/

.dbootstrap .dijitToolbar .dijitButtonContents {
    padding: 1px !important;
}
.dbootstrap .dijitTitlePane {
    border: 1px solid #DDDDDD;
    margin-bottom: 2px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
}
.dbootstrap .dijitTitlePaneTitle {
    color: #666666 !important;
    border-bottom: none;
    padding: 8px 15px;
    background-color: #F5F5F5;
}
.dijitSliderBarContainerH {
    z-index: 0 !important;
}
.dbootstrap .dijitTitlePaneContentInner {
    background-color: #FFFFFF;
}
.dbootstrap :focus {
    outline: none !important;
}
/* end dbootstrap overrides*/

